test/spec_vectors/load/fail/module_23.wat
(module (memory 1) (func $load16_u_i64 (i64.load16_u (i32.const 0))))